2014-05-22 Matt:
	* Makefile now works
	* committing some updates related to how events are accessed in mixer
	

2014-05-21 Matt:
	* Repurposing this package
	* Removing Geometry package
	* Adding include, src, run directory.  Nothing compiles yet!!
	* Committing some more code for the larger picture. Nothing runs yet, just skeleton.

2014-05-08 Matt:
	* Adding some code sketching out GeoMessenger and how to check objects in volumes.

2014-05-06 Matt:
	* Adding geometry directory structure and ChangeLog