@@ -40,11 +40,12 @@ obj/Event_Dict.so: obj/Event_Dict.cxx $(inc)/Event.h
 	$(CXX) -c $< -o $@ $(SOFLAGS) $(CXXFLAGS) -Os -g1 -I$(inc)
 
 #---- Additional Objects ----#
-#obj/DataPoints.so:	$(inc)/DataPoints.h
+obj/DataPoints.so:	$(src)/DataPoints.cxx
 #obj/Detector.so:	$(inc)/Detector.h
 obj/Detectors.so:	$(src)/Detectors.cxx
 obj/Dim3.so:		$(src)/Dim3.cxx
 obj/Mixer.so:		$(src)/Mixer.cxx
+obj/SaveOutput.so:	$(src)/SaveOutput.cxx
 obj/Analyze.so:		$(src)/Analyze.cxx
 obj/Ana.so:		../main/Ana.cxx
 
@@ -52,9 +53,11 @@ obj/Ana.so:		../main/Ana.cxx
 ana:	 			\
 	obj/Particle_Dict.so	\
 	obj/Event_Dict.so	\
+	obj/DataPoints.so	\
 	obj/Detectors.so	\
 	obj/Dim3.so		\
 	obj/Mixer.so		\
+	obj/SaveOutput.so	\
 	obj/Analyze.so		\
 	obj/Ana.so
 	$(CXX) $+ -o $@ $(CXXFLAGS) $(LDFLAGS) $(links)
